--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,7 @@
     <h1>
         Hello, {{current_user.username}}!
     </h1>
+    {% if form %}
     <form action="", method="post">
         {{ form.hidden_tag() }}
         <p>
@@ -15,9 +16,16 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
+    {% endif %}
     {% for post in posts %}
     <p>
-        {{ post.author.username }} says: <b>{{ post.body }}</b>
+        {% include '_post.html' %}
     </p>
     {% endfor %}
+    {% if prev_url %}
+    <a href="{{ prev_url }}">Newer posts</a>
+    {% endif %}
+    {% if next_url %}
+    <a href="{{ next_url }}">Older posts</a>
+    {% endif %}
 {% endblock %}
